# video_annotator

./: README.md  pyproject.toml  video_annotate.py
