[tool.poetry]
name = "yolo"
version = "0.1.0"
description = ""
authors = ["Khanh"]

[tool.poetry.dependencies]
python = "~3.9"
opencv-python = "^4.5.5"
torch = "^1.11.0"
torchvision = "^0.12.0"
pandas = "^1.4.1"
PyYAML = "^6.0"
tqdm = "^4.63.1"
numpy = "^1.22.3"
scipy = "^1.8.0"
seaborn = "^0.11.2"
click = "^8.1.1"
pafy = "^0.5.5"
youtube_dl = "2020.12.2"

[tool.poetry.dev-dependencies]
jupyterlab = "^3.3.2"
matplotlib = "^3.5.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
